FIx gallery scroll on mobile

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -232,8 +232,14 @@ a {
   overflow: 'hidden';
 }
 
+
+.gallery {
+  overflow: scroll;
+  width: 100%;
+  height: 100%;
+}
+
 .galleryContainer {
-  
   display: flex;
   flex-wrap: wrap;
   overflow: scroll;
